Remove tests for stateless.upload.delayed disabled (#2339)
RCO has been running in production for a few releases now. We don't
expect to ever revert back to the old behaviours. Hence there is no
value in testing the old behaviours and this PR removes those tests.

Resolves: ES-8317